--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -227,7 +227,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p><span style="color:red">In addition to the mandatory components, you will need to add those components you need to test in the <strong>TestScript</strong> component - this not related to your selected template and the user needs to create it manually.</span></p>
 <blockquote><p><p style="font-size:18px"><span style="color:red"><strong>WARNING:</strong> the TestScript component needs to be a .zip file within a .zip, otherwise the factory run will fail. See example below:</span><span style="color:red">
 <span style="color:red"></span><span style="color:red"><p>
-<p><img src="./images/components-test-script.png" alt=""></p>
+<p><img src="images/components-test-script.png" alt=""></p>
 </span></span></blockquote>
 </li>
 <li><p>For all added components, make sure you add the related files archive into the artifactory as explained above.</p>
