--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -332,7 +332,7 @@
 <p>The Temenos Continuous Deployment Platform will use this information to populate the dashboard. Below you will find an example format.</p>
 <p><img src="images/selenium-dashboard-example.png" alt=""></p>
 <p>The Temenos Continuous Deployment Platform will move these consolidated results to a centralized storage account and provide a download facility from the dashboard for each test suite.</p>
-<p><img src="./images/selenium-consolidated-test-restuls.png" alt=""></p>
+<p><img src="images/selenium-consolidated-results.png" alt=""></p>
 <p><br>
 </br></p>
 <h1 id="attachments">Attachments</h1>
