--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -85,7 +85,7 @@
 <h2 id="implementation">Implementation</h2>
 <p>The Selenium Template will provision the following:</p>
 <ul>
-<li><p>Windows 2017 VM with the below software/packages pre-installed:</p>
+<li><p>Windows Server 2016 Datacenter Edition with the below software/packages pre-installed:</p>
 <ul>
 <li><p>Open JAVA / JDK  1.8</p>
 </li>
