--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -87,16 +87,36 @@
 <table>
 <thead>
 <tr>
-<th>Template   Name</th>
+<th>Template Name</th>
 <th>Version</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-202004-ARM</td>
+<td>202004</td>
+<td>TSS-R19Template for Stack06 - 202004 using ARM template</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-202003</td>
 <td>202003</td>
-<td>TSS-R20Template for Stack06 - 202003</td>
+<td>TSS-R20Template for   Stack06 - 202003</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202002</td>
@@ -104,9 +124,19 @@
 <td>TSS-R20Template for Stack06 - 202002</td>
 </tr>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-202001</td>
 <td>202001</td>
 <td>TSS-R20Template for Stack06 - 202001</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201912</td>
@@ -114,9 +144,19 @@
 <td>TSS-R19Template for Stack06 - 201912</td>
 </tr>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-201911</td>
 <td>201911</td>
 <td>TSS-R19Template for Stack06 - 201911</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201910</td>
@@ -124,9 +164,19 @@
 <td>TSS-R19Template for Stack06 - 201910</td>
 </tr>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-201909</td>
 <td>201909</td>
 <td>TSS-R19Template for Stack06 - 201909</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201908</td>
@@ -134,14 +184,29 @@
 <td>TSS-R19Template for Stack06 - 201908</td>
 </tr>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-201904</td>
 <td>201904</td>
 <td>TSS-R19Template for Stack06 - 201904</td>
 </tr>
 <tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-201804</td>
 <td>201804</td>
 <td>TSS-R18Template for Stack06 - 201804</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table>
