--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -125,7 +125,7 @@
 <li><p><strong>Delete environment</strong> - removes all resources including VMs and configuration repository that are part of an Environment</p>
 </li>
 </ul>
-<p><img src="./images/actions-button.png" alt=""> 
+<p><img src="images/actions-button.png" alt=""> 
 <br></p>
 </li>
 </ul>
