--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -88,18 +88,18 @@
 <p>Click <strong>Run Now</strong>.</p>
 <p><img src="images/run-factory-dashboard.png" alt=""> </p>
 <p>The process is initiated and it will get immediately to the stage where an environment based on your chosen template is created. </p>
-<p><img src="./images/run-factory-deploy.png" alt=""></p>
+<p><img src="images/run-factory-deploy.png" alt=""></p>
 <p>During the factory run you are able to:</p>
 <ol>
 <li><p>See the duration of total time between different stages and the status of the current stage</p>
 </li>
 <li><p>Click on the <strong>Actions</strong> button to:</p>
 <p>  2.1 <strong>View Environment</strong> -  check the creation of the environment. The name of the environment will be &quot;Env <em> for </em> Factory <em> xxx&quot;, where xxx is the name of your factory (in our case Env </em> for <em> Factory </em> Demo _ Factory)</p>
-<p>   <img src="./images/run-factory-environment-create.png" alt=""> </p>
+<p>   <img src="images/run-factory-environment-create.png" alt=""> </p>
 <p>  2.2 View Event History - see the logs of the factory run</p>
 <p>   <img src="images/run-factory-environment-event-history.png" alt=""> </p>
 <p>  2.3. <strong>Abort</strong> a factory run by clicking the &#39;Abort&#39; button on the top right side of the page (i.e. in case of a mistake). This action prevents you from deploying, testing or promoting the components. By clicking on <strong>Abort</strong> a confirmation pops-up which asks you to confirm the action. You can edit the factory and then click &#39;Run now&#39; again to see the results.</p>
-<p>  <img src="./images/run-factory-abort-factory.png" alt="">     </p>
+<p>  <img src="images/run-factory-abort-factory.png" alt="">     </p>
 </li>
 <li><p>Refresh the timeline by clicking on the <strong>Refresh</strong> icon</p>
 </li>
@@ -117,7 +117,7 @@
 <p><img src="./images/run-factory-test-deploy.png" alt=""></p>
 <p><img src="images/run-factory-create-test.png" alt=""></p>
 <p>After running the tests successfully, you will see some details about all stages and the results, as in the example below:</p>
-<p><img src="./images/run-factory-completed.png" alt=""></p>
+<p><img src="images/run-factory-completed.png" alt=""></p>
 <p>Based on any factory run, the user can take several actions:</p>
 <ul>
 <li><p><strong>Trigger New Environment</strong> - trigger a new environment to do triage, demo or ad-hoc testing (this will clone the factory environment)</p>
