--- a/home/techguides/https-in-front-of-sftp.html
+++ b/home/techguides/https-in-front-of-sftp.html
@@ -141,8 +141,9 @@
 <p>  <img src="images/winscp-env-loggedin.png" alt=""> </p>
 </li>
 </ul>
-<h1 id="5-connect-to-the-environment-using-a-curl-command">5. Connect to the environment using a Curl command</h1>
-<p><strong>See below an example:</strong></p>
+<h1 id="4-connect-to-the-environment-using-a-curl-command">4. Connect to the environment using a CURL command</h1>
+<p>You can also connect to a Temenos Continuous Deployment Environment using a curl command.
+See below an example:</p>
 <pre><code>$ curl.exe --insecure -u demouser01:T3m3n0s2o2o#! -T &quot;Desktop/Tasklists.txt&quot; https://jpplatformsftp.dev.temenos.cloud/testupload/
 </code></pre><p><strong>Output</strong></p>
 <pre><code>% Total % Received % Xferd Average Speed Time Time Time Current
