--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -82,6 +82,12 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202008"><strong>202008</strong></h1>
+<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA |&nbsp; <strong>WorkflowServiceTag</strong>: TBA</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Technical Enhancements</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html?q=https">here</a>)</p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007 |&nbsp; <strong>WorkflowServiceTag</strong>: 202007.RC8 </p>
