--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -109,8 +109,16 @@
 <blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
-<p>On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
-<p><img src="images/user-change-password.png" alt="user-change-password"></p>
+<p><br></p>
+<h1 id="recover-password">Recover Password</h1>
+<p>If you have forgotten or lost your password, you can recover it by contacting the below:</p>
+<ul>
+<li><p>If your Org is on a PROD platform contact CloudPlatformSupport@temenos.com </p>
+</li>
+<li><p>If your Org is on a EU or TSS platform contact Global Cloud Platform Support (gcp@temenos.com) </p>
+</li>
+</ul>
+<p><br></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p><img src="images/see-user-role.png" alt=""></p>
