--- a/home/techguides/trigger-cob.html
+++ b/home/techguides/trigger-cob.html
@@ -104,7 +104,7 @@
 <li><p>Once COB is started, the monitoring job monitors the COB to see if it gets completed. The routine AR.CobcheckProcess. The following statuses are reported in the Events log in case of problem. CRASHED, STOPPED or COMPLETED. If more than one TSA.SERVICE is triggered, the COB step will be completed only if all the services are completed successfully. </p>
 </li>
 </ul>
-<p>Click <strong><a href="../zip/RegressionLog-TODAYsDATE.zip">HERE</a></strong> the RegressionLog  and TODAYsDATE.txt samples. </p>
+<p>Click <strong><a href="../zip/RegressionLog-TODAYsDATE.zip">HERE</a></strong> to download the RegressionLog  and TODAYsDATE.txt samples. </p>
 <p><br></p>
               <hr>
               
