--- a/home/techguides/https-in-front-of-sftp.html
+++ b/home/techguides/https-in-front-of-sftp.html
@@ -92,7 +92,8 @@
 <p><br></p>
 <p>Follow the steps below to access the UD directories:</p>
 <h1 id="1-change-user-password">1. Change user password</h1>
-<p>In order to access the SFTP using HTTPs you need to reset your password (learn how to change it <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html">here</a>)</p>
+<p>In order to access the SFTP using HTTPs you need to reset your password (learn how to change it <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html">here</a>).</p>
+<p>By changing the password, your entry is added in the HTTP server and enables you to access SFTP over the HTTP server. </p>
 <h1 id="2-access-sftp">2. Access SFTP</h1>
 <p>After the password is updated the SFTP server can be accessed via a browser:</p>
 <ol>
