--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -94,18 +94,19 @@
 <li><p>See the duration of total time between different stages and the status of the current stage</p>
 </li>
 <li><p>Click on the <strong>Actions</strong> button to:</p>
-<p>  2.1 <strong>View Environment</strong> -  check the creation of the environment. The name of the environment will be &quot;Env <em> for </em> Factory <em> xxx&quot;, where xxx is the name of your factory (in our case Env </em> for <em> Factory </em> Demo _ Factory)</p>
-<p>   <img src="images/run-factory-environment-create.png" alt=""> </p>
-<p>  2.2 View Event History - see the logs of the factory run</p>
-<p>   <img src="images/run-factory-environment-event-history.png" alt=""> </p>
-<p>  2.3. <strong>Abort</strong> a factory run by clicking the &#39;Abort&#39; button on the top right side of the page (i.e. in case of a mistake). This action prevents you from deploying, testing or promoting the components. By clicking on <strong>Abort</strong> a confirmation pops-up which asks you to confirm the action. You can edit the factory and then click &#39;Run now&#39; again to see the results.</p>
-<p>  <img src="images/run-factory-abort-factory.png" alt="">     </p>
+<p>  2.1 <strong>View Environment</strong> -  check the creation of the environment. The name of the environment will be &quot;Env <em> for </em> Factory <em> xxx&quot;, where xxx is the name of your factory (in our case Env </em> for <em> Factory </em> Demo _ Factory)
+   <img src="images/run-factory-environment-create.png" alt=""> </p>
+<p><br></p>
+<p>  2.2 <strong>View Event History</strong> - see the logs of the factory run
+   <img src="images/run-factory-environment-event-history.png" alt=""> </p>
+<p><br>
+  2.3 <strong>Abort</strong> a factory run by clicking the &#39;Abort&#39; button on the top right side of the page (i.e. in case of a mistake). This action prevents you from deploying, testing or promoting the components. By clicking on <strong>Abort</strong> a confirmation pops-up which asks you to confirm the action. You can edit the factory and then click &#39;Run now&#39; again to see the results.
+    <img src="images/run-factory-abort-factory.png" alt=""><br><br></p>
 </li>
 <li><p>Refresh the timeline by clicking on the <strong>Refresh</strong> icon</p>
 </li>
 </ol>
 <p><img src="images/run-factory-deploy2.png" alt=""></p>
-<p>Clicking on the Environments tab on the left menu, you can check the creation of the environment. The name of the environment will be &quot;Env for Factory xxx&quot;, where xxx is the name of your factory.</p>
 <div class="NOTE"><h5>Note</h5><ol>
 <li><p>The environment creation stage may take between 20 minutes and a few hours depending on the template used. </p>
 <p>A factory can be enabled or disabled at any time. If a factory is disabled, factory runs (both scheduled and user triggered) will not be triggered. </p>
@@ -121,8 +122,6 @@
 <p>Based on any factory run, the user can take several actions:</p>
 <ul>
 <li><p><strong>Trigger New Environment</strong> - trigger a new environment to do triage, demo or ad-hoc testing (this will clone the factory environment)</p>
-</li>
-<li><p><strong>View Environment</strong> - view the environment used for the factory run</p>
 </li>
 <li><p><strong>View Event History</strong> - view the flow of status of the factory run</p>
 </li>
