--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -86,15 +86,8 @@
 <p><strong>InfraBuild</strong>: 33  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202008.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 233  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202008 |&nbsp; <strong>WorkflowServiceTag</strong>: 202008.RC7</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. HTTP server in front of SFTP Server</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more here)</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Promote to SIT</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- new Manifest Info  added in Environment details page (feature not available for environments resulted from automated factories)</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- user are able to rollback to any environment database state and can backup the database (feature not available for environments resulted from automated factories)
-<br>
-</br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. T24 Upgrade Automation</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Extend users are now able to run T24 upgrades through the Temenos Continuous Deployment platform (click here to learn more)</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. HTTPs server in front of SFTP Server</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Access to SFTP server is now available through HTTPs (read more <a href="http://documentation.temenos.cloud/home/techguides/https-in-front-of-sftp.html">here</a>)</p>
 <h1 id="202007"><strong>202007</strong></h1>
 <p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202007.RC9
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 209 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202007 |&nbsp; <strong>WorkflowServiceTag</strong>: 202007.RC8 </p>
