--- a/docfx_project/site/home/techguides/run-factory.html
+++ b/docfx_project/site/home/techguides/run-factory.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="run-factory">Run Factory</h2>
 
-<p>After setting-up a factory (see configuration steps in <a href="factories.md#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
+<p>After setting-up a factory (see configuration steps in <a href="./factories.md#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
 <div class="NOTE"><h5>Note</h5><p>In order to run your factory, make sure first you select the stream and stage where you created the factory <em>(top right)</em>.</p>
 </div>
 <p>If the factory has never been run, you will notice the following message on the screen, under the respective factory: <em>The factory has never been run before. Please start the factory process now by clicking on the &quot;Run Now&quot; button.</em></p>
@@ -89,11 +89,25 @@
 <p><img src="images/run-factory-dashboard.png" alt=""> </p>
 <p>The process is initiated and it will get immediately to the stage where an environment based on your chosen template is created. </p>
 <p><img src="images/run-factory-deploy.png" alt=""></p>
-<div class="NOTE"><h5>Note</h5><p> In the event of a mistake, the user can abort a factory run by clicking the &#39;Abort&#39; button on the top right side of the page. This action prevents you from deploying, testing or promoting the components. The user can edit the factory and then click &#39;Run now&#39; again to see the results.
-<img src="images/run-factory-abort-factory.png" alt="">     </p>
-</div>
+<p>During the factory run you are able to:</p>
+<ol>
+<li><p>See the duration of total time between different stages and the status of the current stage</p>
+</li>
+<li><p>Click on the <strong>Actions</strong> button to:</p>
+<p>  2.1 <strong>View Environment</strong> -  check the creation of the environment. The name of the environment will be &quot;Env <em> for </em> Factory <em> xxx&quot;, where xxx is the name of your factory (in our case Env </em> for <em> Factory </em> Demo _ Factory)
+   <img src="images/run-factory-environment-create.png" alt=""> </p>
+<p><br></p>
+<p>  2.2 <strong>View Event History</strong> - see the logs of the factory run
+   <img src="images/run-factory-environment-event-history.png" alt=""> </p>
+<p><br>
+  2.3 <strong>Abort</strong> a factory run by clicking the &#39;Abort&#39; button on the top right side of the page (i.e. in case of a mistake). This action prevents you from deploying, testing or promoting the components. By clicking on <strong>Abort</strong> a confirmation pops-up which asks you to confirm the action. You can edit the factory and then click &#39;Run now&#39; again to see the results.
+    <img src="images/run-factory-abort-factory.png" alt=""><br><br></p>
+</li>
+<li><p>Refresh the timeline by clicking on the <strong>Refresh</strong> icon</p>
+</li>
+</ol>
+<p><img src="images/run-factory-deploy2.png" alt=""></p>
 <p>Clicking on the Environments tab on the left menu, you can check the creation of the environment. The name of the environment will be &quot;Env for Factory xxx&quot;, where xxx is the name of your factory.</p>
-<p><img src="images/run-factory-environment-create.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><ol>
 <li><p>The environment creation stage may take between 20 minutes and a few hours depending on the template used. </p>
 <p>A factory can be enabled or disabled at any time. If a factory is disabled, factory runs (both scheduled and user triggered) will not be triggered. </p>
