--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -109,7 +109,24 @@
 <blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
-<p><br></p>
+<h1 id="change-password">Change Password</h1>
+<p>To change the password you need to follow the next steps:</p>
+<ol>
+<li><p>Click on your user name (top-right)</p>
+</li>
+<li><p>Click on <strong>Profile</strong></p>
+<p><img src="./images/user-change-password2.png" alt="user-change-password2"></p>
+</li>
+<li><p>Click on <strong>Change Password</strong></p>
+<p><img src="./images/user-change-password3.png" alt="user-change-password3"></p>
+</li>
+<li><p>Fill in the <strong>Current Password</strong>, <strong>New Password</strong> and <strong>Confirm Password</strong> and click <strong>Confirm</strong></p>
+<p><img src="./images/user-change-password4.png" alt="user-change-password4"></p>
+</li>
+</ol>
+<blockquote><p>Note: On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
+</blockquote>
+<p> <img src="images/user-change-password.png" alt="user-change-password"></p>
 <h1 id="recover-password">Recover Password</h1>
 <p>If you have forgotten or lost your password, you can recover it by contacting the below:</p>
 <ul>
