--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -84,20 +84,77 @@
 <p>Below you can find the current templates catalogue: </p>
 <h1 id="t24">T24</h1>
 <h2 id="tss">TSS</h2>
-<p>| Template   Name             | Version | Description                                                |
-Template Name   Version Description
-MB-T24-Jboss-SQL-202008 202008  TSS-R20 Template for Stack06 - 202008 using ARM template
-MB-T24-Jboss-SQL-202004-ARM 202004  TSS-R19Template for Stack06 - 202004 using ARM template
-MB-T24-Jboss-SQL-202003 202003  TSS-R20Template for Stack06 - 202003
-MB-T24-Jboss-SQL-202002 202002  TSS-R20Template for Stack06 - 202002
-MB-T24-Jboss-SQL-202001 202001  TSS-R20Template for Stack06 - 202001
-MB-T24-Jboss-SQL-201912 201912  TSS-R19Template for Stack06 - 201912
-MB-T24-Jboss-SQL-201911 201911  TSS-R19Template for Stack06 - 201911
-MB-T24-Jboss-SQL-201910 201910  TSS-R19Template for Stack06 - 201910
-MB-T24-Jboss-SQL-201909 201909  TSS-R19Template for Stack06 - 201909
-MB-T24-Jboss-SQL-201908 201908  TSS-R19Template for Stack06 - 201908
-MB-T24-Jboss-SQL-201904 201904  TSS-R19Template for Stack06 - 201904
-MB-T24-Jboss-SQL-201804 201804  TSS-R18Template for Stack06 - 201804</p>
+<table>
+<thead>
+<tr>
+<th>Template   Name</th>
+<th>Version</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>MB-T24-Jboss-SQL-202008</td>
+<td>202008</td>
+<td>TSS-R20 Template for Stack06 - 202008 using ARM   template</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-202004-ARM</td>
+<td>202004</td>
+<td>TSS-R19Template for Stack06 - 202004 using ARM   template</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-202003</td>
+<td>202003</td>
+<td>TSS-R20Template for Stack06 - 202003</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-202002</td>
+<td>202002</td>
+<td>TSS-R20Template for Stack06 - 202002</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-202001</td>
+<td>202001</td>
+<td>TSS-R20Template for Stack06 - 202001</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201912</td>
+<td>201912</td>
+<td>TSS-R19Template for Stack06 - 201912</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201911</td>
+<td>201911</td>
+<td>TSS-R19Template for Stack06 - 201911</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201910</td>
+<td>201910</td>
+<td>TSS-R19Template for Stack06 - 201910</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201909</td>
+<td>201909</td>
+<td>TSS-R19Template for Stack06 - 201909</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201908</td>
+<td>201908</td>
+<td>TSS-R19Template for Stack06 - 201908</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201904</td>
+<td>201904</td>
+<td>TSS-R19Template for Stack06 - 201904</td>
+</tr>
+<tr>
+<td>MB-T24-Jboss-SQL-201804</td>
+<td>201804</td>
+<td>TSS-R18Template for Stack06 - 201804</td>
+</tr>
+</tbody>
+</table>
 <h2 id="oss">OSS</h2>
 <table>
 <thead>
