--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -115,13 +115,13 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>Click on your user name (top-right)</p>
 </li>
 <li><p>Click on <strong>Profile</strong></p>
-<p><img src="./images/user-change-password2.png" alt="user-change-password2"></p>
+<p><img src="images/user-change-password2.png" alt="user-change-password2"></p>
 </li>
 <li><p>Click on <strong>Change Password</strong></p>
-<p><img src="./images/user-change-password3.png" alt="user-change-password3"></p>
+<p><img src="images/user-change-password3.png" alt="user-change-password3"></p>
 </li>
 <li><p>Fill in the <strong>Current Password</strong>, <strong>New Password</strong> and <strong>Confirm Password</strong> and click <strong>Confirm</strong></p>
-<p><img src="./images/user-change-password4.png" alt="user-change-password4"></p>
+<p><img src="images/user-change-password4.png" alt="user-change-password4"></p>
 </li>
 </ol>
 <blockquote><p>Note: On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
